# adlfs

./: ,pypirc  .buildinfo  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  README.rst  api.html  azure-pipelines.yml  dev-requirements.txt  docker-compose.yml  genindex.html  index.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  utils.py  writefile.csv
.doctrees/: api.doctree  environment.pickle  index.doctree
.github/workflows/: ci.yml  docs.yml  release.yml  tests.yml
.pytest_cache/v/cache/: lastfailed  nodeids
_sources/: index.md.txt
adlfs/: __init__.py  _version.py  _version.pyi  adlfs.code-workspace  core.py  gen1.py  onelake.py  spec.py  tests.py  utils.py
adlfs.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
adlfs/aio/: __init__.py  caching.py  core.py  spec.py  utils.py
adlfs/aio/tests/: test_core.py  test_spec.py
adlfs/tests/: README.md  azure-config.yml  conftest.py  constants.py  test_connect_client.py  test_core.py  test_fetch_range.py  test_init.py  test_integration.py  test_loop.py  test_onelake.py  test_pickling.py  test_spec.py  test_uri_format.py  test_user_agent.py
adlfs/tests/dummyfiles/: testfile.csv
api/: index.html
conda.recipe/: meta.yaml
dask_adlfs/: __init__.py  core.py
dask_adlfs/tests/: settings.py  test_trim_filename.py  tests.py
docs/: api.md  conf.py  index.md  requirements.txt
genindex/: index.html
requirements/: base.txt  dev.txt  earliest.txt  latest.txt
search/: index.html
subfolder/nested_subfolder/writefile.csv/: 0.part
testfolder/alzhiemers.parquet/: _common_metadata  _metadata  part.0.parquet  part.1.parquet  part.2.parquet  part.3.parquet  part.4.parquet  part.5.parquet  part.6.parquet  part.7.parquet  part.8.parquet  part.9.parquet
tests/: conftest.py  docker-compose.yaml  test_core.py
tools/: azure_sdk_kwargs.py
