[build-system]
requires = ["setuptools>=61", "setuptools_scm[toml]>=7"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "adlfs/_version.py"

[project]
name = "adlfs"
description = "Access Azure Blobs and Data Lake Storage (ADLS) Gen2 with fsspec and dask"
readme = "README.md"
license = {text = "BSD"}
maintainers = [{ name = "Greg Hayes", email = "hayesgb@gmail.com"}]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
keywords = ["file-system", "dask", "azure"]
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
    "azure-core>=1.28.0,<2.0.0",
    "azure-datalake-store>=0.0.53,<2.0.0",
    "azure-identity",
    "azure-storage-blob[aio]>=12.17.0",
    "fsspec>=2023.12.0",
]

[project.optional-dependencies]
docs = [
    "sphinx",
    "myst-parser",
    "furo",
    "numpydoc",
]
tests = ["pytest", "docker", "pytest-mock", "arrow", "dask[dataframe]"]

[project.entry-points."fsspec.specs"]
abfss = "adlfs:AzureBlobFileSystem"

[tool.setuptools.packages.find]
include = ["adlfs*"]
exclude = ["tests"]
namespaces = false

[tool.isort]
profile = "black"
