# Inside of setup.cfg
[metadata]
description-file = README.md

[flake8]
exclude = versioneer.py,docs/source/conf.py,setup.py
ignore =
    E20,   # Extra space in brackets
    E231,E241,  # Multiple spaces around ","
    E26,   # Comments
    E4,    # Import formatting
    E721,  # Comparing types instead of isinstance
    E731,  # Assigning lambda expression
    E741,  # Ambiguous variable names
    W503,  # line break before binary operator
    W504,  # line break after binary operator
    F811,  # redefinition of unused 'loop' from line 10
max-line-length = 120

[tool:pytest]
xfail_strict=true
asyncio_mode = auto

[versioneer]
VCS = git
versionfile_source = adlfs/_version.py
versionfile_build = adlfs/_version.py
tag_prefix =
parentdir_prefix = adlfs-
