# Inside of setup.cfg
[metadata]
description-file = README.md

[flake8]
exclude = versioneer.py,docs/source/conf.py,setup.py
ignore =
    # Extra space in brackets
    E20,
    # Multiple spaces around ","
    E231,E241,
    # Comments
    E26,
    # Import formatting
    E4,
    # Comparing types instead of isinstance  
    E721,
    # Assigning lambda expression
    E731,
    # Ambiguous variable names
    E741,
    # line break before binary operator
    W503,
    # line break after binary operator
    W504,
    # redefinition of unused 'loop' from line 10
    F811,  
max-line-length = 120

[tool:pytest]
xfail_strict=true
asyncio_mode = auto

[versioneer]
VCS = git
versionfile_source = adlfs/_version.py
versionfile_build = adlfs/_version.py
tag_prefix =
parentdir_prefix = adlfs-
